# fsm_template

./: CMakeLists.txt  README.md
inc/: fsm.h  states.h  transitions.h
src/: fsm.c  main.c  states.c  transitions.c
src/fsm_first/: fsm_first.c  fsm_first.h  fsm_first_states.c  fsm_first_transitions.c  states_first.c  transitions_first.c
src/fsm_second/: fsm_second.c  fsm_second.h  fsm_second_states.c  fsm_second_transitions.c
